create main fragment

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/design_default_color_primary"
-        android:endColor="@color/design_default_color_primary_dark"
-        android:startColor="@color/design_default_color_primary"
+        android:centerColor="@color/purple_500"
+        android:endColor="@color/purple_200"
+        android:startColor="@color/purple_500"
         android:type="linear" />
 </shape>
