--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_photos">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.wallpaper.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_photos"
+        android:name="com.example.wallpaperapplication.Fragments.PhotosFragment"
+        android:label="Photos"
+        tools:layout="@layout/fragment_photos" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.wallpaper.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_collections"
+        android:name="com.example.wallpaperapplication.Fragments.CollectionsFragment"
+        android:label="Collections"
+        tools:layout="@layout/fragment_collections" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.wallpaper.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_favorite"
+        android:name="com.example.wallpaperapplication.Fragments.FavoriteFragment"
+        android:label="Favorite"
+        tools:layout="@layout/fragment_favorite" />
 </navigation>
