--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.PhotosFragment">
-
-
-    <TextView
+    <ProgressBar
+        android:id="@+id/fragmentphotos_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Photos Fragment" />
+        android:layout_centerInParent="true"
+        android:outlineSpotShadowColor="@color/purple_200"></ProgressBar>
 
-</LinearLayout>
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/fragmentphotos_recyclerview"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+
+</RelativeLayout>
