--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -18,12 +18,14 @@
         android:padding="8dp" >
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/item_photo_user_avatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop" />
 
     <TextView
+        android:id="@+id/item_photo_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/TextAppearance.AppCompat.Medium"
