--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -11,10 +11,9 @@
         android:layout_centerInParent="true"
         android:outlineSpotShadowColor="@color/purple_200"></ProgressBar>-->
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/fragmentphotos_recyclerview"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-</androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragmentphotos_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
