--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -7,8 +7,8 @@
     <com.example.wallpaperapplication.Utils.SquareImage
         android:id="@+id/photoitem_photo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,25 +16,27 @@
         android:layout_gravity="bottom"
         android:orientation="horizontal"
         android:background="@color/transparent_color"
-        android:padding="8dp" >
+        android:padding="8dp"
+        >
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/item_photo_user_avatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/item_photo_user_avatar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/item_photo_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:text="TBVSon"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_marginLeft="8dp"/>
-</LinearLayout>
+        <TextView
+            android:id="@+id/item_photo_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:text="TBVSon"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_marginLeft="8dp"/>
+    </LinearLayout>
+
 
 </FrameLayout>
