--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -2,39 +2,43 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.example.wallpaperapplication.Utils.SquareImage
+        android:id="@+id/collection_item_photo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
 
-   <com.example.wallpaperapplication.Utils.SquareImage
-       android:id="@+id/collection_item_photo"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:scaleType="centerCrop"/>
-
-       <RelativeLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/transparent_color"
-              android:padding="12dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#B3000000"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal"
+        android:padding="12dp">
 
            <TextView
                android:id="@+id/collection_item_title"
-               style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="Beautifaul Mountain"
-               android:textColor="@color/white"
-               android:layout_centerHorizontal="true"
-               android:layout_centerVertical="true"
-               android:textAlignment="center"/>
+               style="@style/Base.TextAppearance.AppCompat.Medium"
+               android:text="Beautifully Mountain"
+               android:layout_centerInParent="true"
+               android:textAlignment="center"
+               android:textColor="@color/white"/>
 
            <TextView
                android:id="@+id/collection_item_total_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
+               android:text="12 photos"
+               android:layout_gravity="center"
+               android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
-               android:text="12 photos"
-               android:textColor="@color/white"/>
-       </RelativeLayout>
+               android:paddingTop="96dp"/>
+
+
+    </RelativeLayout>
 
 </FrameLayout>
