Create RealmController Handle favorite Button

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,7 @@
             android:title="@string/menu_collections" />
         <item
             android:id="@+id/nav_favorite"
-            android:icon="@drawable/ic_favorite"
+            android:icon="@drawable/ic_favor"
             android:title="@string/menu_favorite" />
     </group>
 </menu>
