--- a/app/src/main/res/layout/activity_fullscreen_photo.xml
+++ b/app/src/main/res/layout/activity_fullscreen_photo.xml
@@ -3,60 +3,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<ImageView
-    android:id="@+id/activity_fullscreen_photo_photo"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:src="@drawable/placeholder"
-    android:scaleType="centerCrop"/>
+
+    <ImageView
+        android:id="@+id/activity_fullscreen_photo_photo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/placeholder" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_alignParentTop="true"
         android:background="@color/transparent_color"
         android:orientation="horizontal"
-        android:layout_alignParentTop="true">
+        android:padding="8dp">
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/activity_fullscreen_photo_user_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
+
         <TextView
             android:id="@+id/activity_fullscreen_photo_username"
+            style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Medium"
-            android:text="Tran B V Son"
-            android:textColor="@color/white"
             android:layout_gravity="center"
             android:layout_marginLeft="8dp"
-            android:textStyle="bold"/>
+            android:text="Tran B V Son"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
     </LinearLayout>
+
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/activity_fullscreen_photo_fab_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:menu_colorNormal="@color/colorAccent"
         app:menu_colorPressed="@color/colorAccent">
+
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/activity_fullscreen_photo_fab_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_size="mini"
             android:src="@drawable/ic_baseline_favorite"
             app:fab_colorNormal="#FFE049"
-            app:fab_label="Favorite"/>
+            app:fab_label="Favorite"
+            app:fab_size="mini" />
+
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/activity_fullscreen_photo_fab_wallpaper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_size="mini"
             android:src="@drawable/ic_baseline_wallpaper"
             app:fab_colorNormal="#FFE049"
-            app:fab_label="Wallpaper"/>
+            app:fab_label="Wallpaper"
+            app:fab_size="mini" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
