--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,8 +17,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
-    <!-- <FrameLayout
+    <FrameLayout
          android:id="@+id/main_container"
          android:layout_width="match_parent"
-         android:layout_height="match_parent"></FrameLayout>-->
+         android:layout_height="match_parent"></FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
