--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_collection_linearlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:background="@color/white">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <ProgressBar
-            android:id="@+id/fragment_collection_progrssbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragment_collection_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent" />
     </RelativeLayout>
     <LinearLayout
+        android:id="@+id/fragment_collection_information"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:gravity="bottom"
         android:background="@color/purple_200"
         android:padding="8dp"
         android:orientation="vertical">
@@ -59,4 +58,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
+
 </LinearLayout>
