--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,11 @@
         android:name="com.example.wallpaperapplication.Fragments.FavoriteFragment"
         android:label="Favorite"
         tools:layout="@layout/fragment_favorite" />
+
+    <fragment
+        android:id="@+id/nav_collection"
+        android:name="com.example.wallpaperapplication.Fragments.CollectionFragment"
+        android:label="Collection"
+        tools:layout="@layout/fragment_collection" />
+
 </navigation>
